# hippieplot

./: CHANGELOG.md  CONTRIBUTING.md  README.md  SECURITY.md  codemeta.json  pyproject.toml  tox.ini
docs/: index.rst
hippieplot/: __init__.py  cli.py  table_plots.py
tests/: test_cli.py
