[metadata]
description-file = "README.md"

[build-system]
requires = ["poetry>=1.0", "coverage[toml]"]
build-backend = "poetry.masonry.api"


#########################################################################################
# Poetry metadata
#########################################################################################

[tool.poetry]
name = "hippieplot"
version = "0.0.1"
description = "Simple, fast command-line plotting."
maintainers = "dmyersturnbull"
license = "Apache-2.0"
readme = "README.md"
keywords = ["python", "command-line", "plotting"]
homepage = "https://github.com/dmyersturnbull/hippieplot"
repository = "https://github.com/dmyersturnbull/hippieplot"
documentation = "https://hippieplot.readthedocs.io"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Natural Language :: English",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
	"Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Environment :: Console",
	"Framework :: tox",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Visualization"
]
include = [
    "README.md",
    "LICENSE.txt",
    "CHANGELOG.md"
]

[tool.poetry.urls]
ci = "https://github.com/dmyersturnbull/hippieplot/actions"
issues = "https://github.com/dmyersturnbull/hippieplot/issues"
source = "https://github.com/dmyersturnbull/hippieplot"
download = "https://pypi.org/project/hippieplot/"


#########################################################################################
# hippieplot
#########################################################################################

[tool.tyrannosuarus.options]
align    = true

[tool.tyrannosuarus.sources]
# use a literal value ('') or refer to a pyproject setting
# ${today} is the date you run it at, and ${now} is the datetime
status             = "'Development'"
date               = "'${today}'"
copyright          = "'Copyright ${today.year}'"
version            = "tool.poetry.version"
release            = "tool.poetry.version"
pyversions         = "tool.poetry.dependencies"
devdeps            = "tool.poetry.dev-dependencies"
linelength         = "tool.black.line-length"
authors = [
	"Douglas Myers-Turnbull <github:dmyersturnbull,orcid:0000-0003-3610-4808>"
]
maintainers = "tool.hippieplot.sources.authors"
contributors = [

]

[tool.tyrannosuarus.paths]
recipe             = "'recipes/${name}/meta.yml'"
environment        = "'environment.yml'"

[tool.tyrannosuarus.targets]
# these are file and directory names, without filename extensions
# they will only be synced if they exist; never created
# to get a recipe and anaconda env, run 'hippieplot recipe' and 'hippieplot env'
pyproject    = true
init         = true
tox          = true
docs         = true
recipes      = true
license      = true
authors      = true
github       = true
travis       = true
dockerfile   = true
readme       = true
changelog    = true
citation     = true
codemeta     = true
environment  = false


#########################################################################################
# Poetry build & dependencies
#########################################################################################

[tool.poetry.scripts]
hippieplot = "hippieplot.cli:cli"

[tool.poetry.dependencies]
python                   = ">=3.8, <4"
colorama                 = "0.4.3"
tomlkit                  = "^0.6.0"
importlib-metadata       = "^1.6"
typer                    = "^0.2"

[tool.poetry.dev-dependencies]
pre-commit               = "^2.3"
pytest                   = "^5.4"
coverage                 = {extras = ["toml"], version = "^5.1"}
pytest-cov               = "^2.8"
sphinx                   = "^3.0"
sphinx-autoapi           = "^1.3"
sphinx-rtd-theme         = "^0.4.3"
mypy                     = "^0.750"
flake8                   = "^3.7"
flake8-docstrings        = "^1.5"
black                    = "=19.10b0"
isort                    = "^4.3"
sphinx-autodoc-typehints = "^1.10"
xdoctest                 = "^0.12"
hypothesis               = "^5.10"
flake8-bandit            = "^2.1"
flake8-bugbear           = "^20.1"


[tool.poetry.extras]
# manually listed
docs    = ["sphinx", "sphinx-rtd-theme", "sphinx-autoapi"]
# auto-filled from dev-deps
dev     = [
        "pre-commit", "pytest", "coverage", "xdoctest", "hypothesis",
        "sphinx", "sphinx-autodoc-typehints", "sphinx-autoapi",
        "mypy",
        "flake8", "flake8-docstrings",
        "black", "isort",
        "flake8-bandit", "flake8-bugbear"
]


#########################################################################################
# DepHell
#########################################################################################

[tool.dephell.main]
from = {format = "poetry", path = "pyproject.toml"}
to = {format = "setuppy", path = "setup.py"}
versioning = "semver"

[tool.dephell.lock]
from = {format = "poetry", path = "pyproject.toml"}
to = {format = "poetrylock", path = "poetry.lock"}


#########################################################################################
# Style checking
#########################################################################################

[tool.coverage.paths]
source = ["hippieplot"]

[tool.coverage.run]
source = ["hippieplot"]

[tool.coverage.report]
show_missing = true

[tool.black]
line-length = 100
target-version = ["py37", "py38"]

[tool.isort]
line_length = 100
[mypy]
check_untyped_defs = true
strict_optional = true

[pycodestyle]
max-line-length = 100
statistics = true

[pydocstyle]
# 212 and 213 contradict; 203 and 204 contradict; D302 is not relevant in Py3
ignore = ["D203", "D212", "D302"]