[metadata]
description-file = "README.md"

[build-system]
requires = ["poetry>=1,<2", "coverage[toml]>=5,<6", "virtualenv>=20.2"]
build-backend = "poetry.masonry.api"


#########################################################################################
# Poetry metadata
#########################################################################################

[tool.poetry]
name = "hippieplot"
version = "0.0.2"
description = "Simple, fast command-line plotting."
authors = ["Douglas Myers-Turnbull"]
maintainers = ["dmyersturnbull"]
license = "Apache-2.0"
readme = "README.md"
keywords = ["python", "command-line", "plotting"]
homepage = "https://github.com/dmyersturnbull/hippieplot"
repository = "https://github.com/dmyersturnbull/hippieplot"
documentation = "https://hippieplot.readthedocs.io"
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Natural Language :: English",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
	"Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Environment :: Console",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Visualization"
]
include = [
    "README.md",
    "LICENSE.txt",
    "CHANGELOG.md"
]

[tool.poetry.urls]
CI = "https://github.com/dmyersturnbull/hippieplot/actions"
Issues = "https://github.com/dmyersturnbull/hippieplot/issues"
Download = "https://pypi.org/project/hippieplot/"


#########################################################################################
# hippieplot
#########################################################################################

[tool.tyrannosuarus.options]
align    = true

[tool.tyrannosuarus.sources]
status             = "'Development'"
date               = "'${today}'"
copyright          = "'Copyright 2020–2021'"
version            = "tool.poetry.version"
release            = "tool.poetry.version"
pyversions         = "tool.poetry.dependencies"
devdeps            = "tool.poetry.dev-dependencies"
linelength         = "tool.black.line-length"
authors = [
	"Douglas Myers-Turnbull <github:dmyersturnbull,orcid:0000-0003-3610-4808>"
]
maintainers = "tool.hippieplot.sources.authors"

[tool.tyrannosuarus.targets]
pyproject    = true
init         = true
tox          = true
docs         = true
recipes      = true
license      = true
authors      = true
github       = true
travis       = true
dockerfile   = true
readme       = true
changelog    = true
citation     = true
codemeta     = true
environment  = false


#########################################################################################
# Poetry build & dependencies
#########################################################################################

[tool.poetry.scripts]
hippieplot = "hippieplot.cli:cli"

[tool.poetry.dependencies]
python                   = ">=3.8, <4"
colorama                 = ">=0.4, <1.0"
typer                    = ">=0.2, <1.0"

[tool.poetry.dev-dependencies]
pre-commit               = ">=2.9, <3.0"
pre-commit-hooks         = ">=3.4, <4.0"
bandit                   = ">=1.7, <2.0"
pytest                   = ">=6.2, <7.0"
coverage                 = {extras = ["toml"], version = ">=5.3, <6.0"}
mypy                     = ">=0.790, <1.0"
pytest-cov               = ">=2.10, <3.0"
sphinx                   = ">=3.4, <4.0"
sphinx-autoapi           = ">=1.5, <2.0"
sphinx-rtd-theme         = ">=0.5, <1.0"
flake8                   = ">=3.8, <4.0"
flake8-docstrings        = ">=1.5, <2.0"
flake8-bugbear           = ">=20"

[tool.poetry.extras]
dev = [
        "pre-commit", "pre-commit-hooks",
        "pytest", "coverage", "pytest-cov",
        "sphinx", "sphinx-autoapi",
        "flake8", "flake8-docstrings",
        "black",
        "bandit", "flake8-bugbear"
]


#########################################################################################
# Style checking
#########################################################################################

[tool.coverage.paths]
source = ["hippieplot"]

[tool.coverage.run]
source = ["hippieplot"]

[tool.coverage.report]
show_missing = true

[tool.black]
line-length = 100
target-version = ["py38"]

[mypy]
check_untyped_defs = true
strict_optional = true
